[build-system]
requires = [
  "setuptools>=64",
  "wheel",
  "Cython>=0.29.36",
  "numpy>=1.24",
]
build-backend = "setuptools.build_meta"

[project]
name = "hypergraphpercol"
version = "0.1.0"
description = "Hypergraph-based clustering algorithm"
authors = [{ name = "HypergraphPercol" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.24",
  "scikit-learn>=1.3",
  "joblib>=1.3",
  "hdbscan>=0.8",
  "gudhi>=3.10",
  "MiniballCpp>=1.0",
]

[project.optional-dependencies]
umap = ["umap-learn>=0.5"]

[project.urls]
Homepage = "https://github.com/your-user/HypergraphPercol"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
