[build-system]
requires = [
  "setuptools",
  "wheel",
  "Cython",
  "numpy",
]
build-backend = "setuptools.build_meta"

[project]
name = "hypergraphpercol"
version = "0.1.0"
description = "Hypergraph-based clustering algorithm"
authors = [{ name = "HypergraphPercol" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "scikit-learn",
  "joblib",
  "hdbscan",
  "gudhi",
  "MiniballCpp",
]

[project.optional-dependencies]
umap = ["umap-learn"]

[project.urls]
Homepage = "https://github.com/Ludwig-H/HypergraphPercol"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
